--- a/BewareTask/Views/Home/Index.cshtml
+++ b/BewareTask/Views/Home/Index.cshtml
@@ -2,30 +2,53 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+
+<div class="container" style="        
+        height: 500px;
+        background-color: #ff8559;
+        border-radius: 10px;
+        margin-top: 20vh">
+    <div class="row align-items-center justify-content-center" style="height:500px">
+        <div class="col-md-5" style="height:500px">
+            <h2 class="heading mb-3">
+                A Quick & Effective
+                To-Do List
+            </h2>
+            <div class="sub-heading">
+                <p>Beware Task! is a simple to-do list web for your task managemen</p>
+                <p class="mb-5"><a class="btn btn-success btn-lg pb_btn-pill smoothscroll" style="background-color:#fff568; border:0px" href="#Register"><span style="color:black">Register Now!</span></a></p>
+                <p class="mb-5"><a class="btn btn-success btn-lg pb_btn-pill smoothscroll" style="background-color:#fff568; border:0px" href="#Register"><span style="color:black">Login</span></a></p>
+            </div>
+        </div>
+        <div class="col-md-1" style="height:500px">
+
+        </div>
+        <div class="col-md-6" style="background-image: url('../Images/Home.png'); background-size:contain; height:500px; background-repeat:no-repeat">
+
+        </div>
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<div class="container" style="height:500px; ">
+    <div class="row align-items-center justify-content-center" id="headingHomepage">
+        <small>features</small>
+        <h1 style="margin-block-start:0;margin-block-end:0;">Beware Task!</h1>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+    <div class="row align-items-center justify-content-center" id="headingHomepage">
+        <div class="col-md-6">
+
+        </div>
+        <div class="col-md-6">
+
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+    <div class="row align-items-center justify-content-center" id="headingHomepage">
+        <div class="col-md-6">
+
+        </div>
+        <div class="col-md-6">
+
+        </div>
     </div>
 </div>
+
