--- a/BewareTask/Views/Home/Index.cshtml
+++ b/BewareTask/Views/Home/Index.cshtml
@@ -29,25 +29,42 @@
     </div>
 </div>
 
-<div class="container" style="height:500px; ">
-    <div class="row align-items-center justify-content-center" id="headingHomepage">
+
+<div class="container" style="height:500px;" id="containerFeatures">
+    <div class="row align-items-center justify-content-center" id="features">
         <small>features</small>
         <h1 style="margin-block-start:0;margin-block-end:0;">Beware Task!</h1>
     </div>
     <div class="row align-items-center justify-content-center" id="headingHomepage">
         <div class="col-md-6">
-
+            <i class='fas fa-clipboard-list' style='font-size:36px'></i>
+            <h1>Task</h1>
+            <div>
+                <p>Add task and manage your task easily!</p>
+            </div>
         </div>
         <div class="col-md-6">
-
+            <i class='fas fa-calendar-alt' style='font-size:50px'></i>
+            <h1>Date</h1>
+            <div>
+                <p>Add due date to your task, so you can manage what task should you do first!</p>
+            </div>
         </div>
     </div>
     <div class="row align-items-center justify-content-center" id="headingHomepage">
         <div class="col-md-6">
-
+            <i class='fas fa-mouse-pointer' style='font-size:36px'></i>
+            <h1>Easy to Use</h1>
+            <div>
+                <p>The task management designed so the user can use it as easy as posible</p>
+            </div>
         </div>
         <div class="col-md-6">
-
+            <i class='fas fa-money-bill' style='font-size:36px'></i>
+            <h1>Free</h1>
+            <div>
+                <p>No need to worry! Our service is free</p>
+            </div>
         </div>
     </div>
 </div>
