--- a/BewareTask/Views/Shared/_Layout.cshtml
+++ b/BewareTask/Views/Shared/_Layout.cshtml
@@ -7,8 +7,10 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-
-    <style></style>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+    <style>
+    </style>
+   
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
