Login Register Form2

--- a/BewareTask/Views/Home/Index.cshtml
+++ b/BewareTask/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
         background-color: #ff8559;
         border-radius: 10px;
         margin-top: 20vh">
-    <div class="row align-items-center justify-content-center" style="height:500px">
+    <div class="row align-items-center justify-content-center" style="height:500px;overflow:hidden;">
         <div class="col-md-5" style="height:500px">
             <h2 class="heading mb-3">
                 A Quick & Effective
@@ -23,7 +23,7 @@
         <div class="col-md-1" style="height:500px">
 
         </div>
-        <div class="col-md-6" style="background-image: url('../Images/Home.png'); background-size:contain; height:500px; background-repeat:no-repeat">
+        <div class="col-md-6" style="overflow:hidden;background-image: url('../Images/Home.png'); background-size:contain; height:500px; background-repeat:no-repeat">
 
         </div>
     </div>
@@ -31,19 +31,19 @@
 
 
 <div class="container" style="height:500px;" id="containerFeatures">
-    <div class="row align-items-center justify-content-center" id="features">
+    <div class="row align-items-center justify-content-center">
         <small>features</small>
         <h1 style="margin-block-start:0;margin-block-end:0;">Beware Task!</h1>
     </div>
-    <div class="row align-items-center justify-content-center" id="headingHomepage">
-        <div class="col-md-6">
-            <i class='fas fa-clipboard-list' style='font-size:36px'></i>
+    <div class="row align-items-center justify-content-center" >
+        <div class="col-md-6" id="features">
+            <i class='fas fa-clipboard-list' style='font-size:50px'></i>
             <h1>Task</h1>
             <div>
                 <p>Add task and manage your task easily!</p>
             </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6" id="features">
             <i class='fas fa-calendar-alt' style='font-size:50px'></i>
             <h1>Date</h1>
             <div>
@@ -52,15 +52,15 @@
         </div>
     </div>
     <div class="row align-items-center justify-content-center" id="headingHomepage">
-        <div class="col-md-6">
-            <i class='fas fa-mouse-pointer' style='font-size:36px'></i>
+        <div class="col-md-6" id="features">
+            <i class='fas fa-mouse-pointer' style='font-size:50px'></i>
             <h1>Easy to Use</h1>
             <div>
                 <p>The task management designed so the user can use it as easy as posible</p>
             </div>
         </div>
-        <div class="col-md-6">
-            <i class='fas fa-money-bill' style='font-size:36px'></i>
+        <div class="col-md-6" id="features">
+            <i class='fas fa-money-bill' style='font-size:50px'></i>
             <h1>Free</h1>
             <div>
                 <p>No need to worry! Our service is free</p>
