--- a/BewareTask/Views/Shared/_Layout.cshtml
+++ b/BewareTask/Views/Shared/_Layout.cshtml
@@ -9,6 +9,15 @@
 
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <style>
+        #containerFeatures{
+            position:center;
+            margin-top:40px;
+            text-align: center;
+        }
+
+        #features {
+            border-radius: 10px;
+        }
     </style>
    
 </head>
