--- a/BewareTask/Views/Home/Login.cshtml
+++ b/BewareTask/Views/Home/Login.cshtml
@@ -1,4 +1,5 @@
 ﻿
+@model BewareTask.Models.user
 @{
     ViewBag.Title = "Login";
 }
@@ -27,13 +28,13 @@
                 {
                     @Html.AntiForgeryToken()
                     <div class="form-group">
-                        @Html.LabelFor(m => m.Email)
-                        @Html.TextBoxFor(m => m.Email, "", new { @class = "form-control", @placeholder = "Email" })
+                        @Html.LabelFor(m => m.email)
+                        @Html.TextBoxFor(m => m.email, "", new { @class = "form-control", @placeholder = "Email" })
 
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.Password)
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
+                        @Html.LabelFor(m => m.password)
+                        @Html.PasswordFor(m => m.password, new { @class = "form-control", @placeholder = "Password" })
                     </div>
                     <div class="form-group">
                         <input type="submit" name="submit" class="btn btn-primary" value="Login" />
