--- a/BewareTask/Views/Home/Register.cshtml
+++ b/BewareTask/Views/Home/Register.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model BewareTask.Models.user
+
+@{
     ViewBag.Title = "Register";
 }
 
@@ -32,35 +34,25 @@
                 </div>
                 <div class="card-body">
                     <div class="form-group">
-                        @Html.LabelFor(m => m.FirstName)
-                        @Html.TextBoxFor(m => m.FirstName, "", new { @class = "form-control", @placeholder = "First Name" })
-                        @Html.ValidationMessageFor(m => m.FirstName, "", new { @class = "badge badge-danger" })
+                        @Html.LabelFor(m => m.name)
+                        @Html.TextBoxFor(m => m.name, "", new { @class = "form-control", @placeholder = "FullName" })
+                        @Html.ValidationMessageFor(m => m.name, "", new { @class = "badge badge-danger" })
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.LastName)
-                        @Html.TextBoxFor(m => m.LastName, "", new { @class = "form-control", @placeholder = "Last Name" })
-                        @Html.ValidationMessageFor(m => m.LastName, "", new { @class = "badge badge-danger" })
-
-                    </div>
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.Email)
-                        @Html.TextBoxFor(m => m.Email, "", new { @class = "form-control", @placeholder = "Email" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "badge badge-danger" })
+                        @Html.LabelFor(m => m.email)
+                        @Html.TextBoxFor(m => m.email, "", new { @class = "form-control", @placeholder = "Email" })
+                        @Html.ValidationMessageFor(m => m.email, "", new { @class = "badge badge-danger" })
                         @if (ViewBag.error != null)
                         {
                             <span class="badge badge-danger">@ViewBag.error</span>
                         }
                     </div>
                     <div class="form-group">
-                        @Html.LabelFor(m => m.Password)
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "badge badge-danger" })
+                        @Html.LabelFor(m => m.password)
+                        @Html.PasswordFor(m => m.password, new { @class = "form-control", @placeholder = "Password" })
+                        @Html.ValidationMessageFor(m => m.password, "", new { @class = "badge badge-danger" })
                     </div>
-                    <div class="form-group">
-                        @Html.LabelFor(m => m.ConfirmPassword)
-                        @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = "Confim Password" })
-                        @Html.ValidationMessageFor(m => m.ConfirmPassword, "", new { @class = "badge badge-danger" })
-                    </div>
+                   
                     <div class="form-group">
                         <input type="submit" name="submit" class="btn btn-danger" value="Register" />
                     </div>
