--- a/BewareTask/Views/Home/Index.cshtml
+++ b/BewareTask/Views/Home/Index.cshtml
@@ -7,17 +7,19 @@
         height: 500px;
         background-color: #ff8559;
         border-radius: 10px;
-        margin-top: 20vh">
+        margin-top: 80px">
     <div class="row align-items-center justify-content-center" style="height:500px;overflow:hidden;">
         <div class="col-md-5" style="height:500px">
-            <h2 class="heading mb-3">
+            <h2 class="heading mb-3" id="headingTitle">
                 A Quick & Effective
                 To-Do List
             </h2>
-            <div class="sub-heading">
+            <div class="sub-heading" id="subheadingTitle">
                 <p>Beware Task! is a simple to-do list web for your task managemen</p>
-                <p class="mb-5"><a class="btn btn-success btn-lg pb_btn-pill smoothscroll" style="background-color:#fff568; border:0px" href="#Register"><span style="color:black">Register Now!</span></a></p>
-                <p class="mb-5"><a class="btn btn-success btn-lg pb_btn-pill smoothscroll" style="background-color:#fff568; border:0px" href="#Register"><span style="color:black">Login</span></a></p>
+                <p class="mb-5">
+                    <a class="btn btn-success btn-lg pb_btn-pill smoothscroll" style="background-color:#fff568; border:0px" href="#Register"><span style="color:black">Register Now!</span></a>
+                    <a class="btn btn-success btn-lg pb_btn-pill smoothscroll" style="background-color:#fff568; border:0px" href="#Register"><span style="color:black">Login</span></a>
+                </p>
             </div>
         </div>
         <div class="col-md-1" style="height:500px">
@@ -30,22 +32,22 @@
 </div>
 
 
-<div class="container" style="height:500px;" id="containerFeatures">
-    <div class="row align-items-center justify-content-center">
-        <small>features</small>
-        <h1 style="margin-block-start:0;margin-block-end:0;">Beware Task!</h1>
+<div class="container" style="height:500px;"id="containerFeatures" >
+    <div class="row align-items-center justify-content-center"id="headingFeatures">
+        <small style="font-size: 20px;">features</small>
+        <h1 style="margin-block-start:0;margin-block-end:0;">BEWARE TASKS!</h1>
     </div>
     <div class="row align-items-center justify-content-center" >
         <div class="col-md-6" id="features">
             <i class='fas fa-clipboard-list' style='font-size:50px'></i>
-            <h1>Task</h1>
+            <h3>Task</h3>
             <div>
                 <p>Add task and manage your task easily!</p>
             </div>
         </div>
         <div class="col-md-6" id="features">
             <i class='fas fa-calendar-alt' style='font-size:50px'></i>
-            <h1>Date</h1>
+            <h3>Date</h3>
             <div>
                 <p>Add due date to your task, so you can manage what task should you do first!</p>
             </div>
@@ -54,14 +56,14 @@
     <div class="row align-items-center justify-content-center" id="headingHomepage">
         <div class="col-md-6" id="features">
             <i class='fas fa-mouse-pointer' style='font-size:50px'></i>
-            <h1>Easy to Use</h1>
+            <h3>Easy to Use</h3>
             <div>
                 <p>The task management designed so the user can use it as easy as posible</p>
             </div>
         </div>
         <div class="col-md-6" id="features">
             <i class='fas fa-money-bill' style='font-size:50px'></i>
-            <h1>Free</h1>
+            <h3>Free</h3>
             <div>
                 <p>No need to worry! Our service is free</p>
             </div>
