--- a/BewareTask/Views/Shared/_Layout.cshtml
+++ b/BewareTask/Views/Shared/_Layout.cshtml
@@ -6,18 +6,63 @@
     <title>@ViewBag.Title - BewareTasks!</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-
+    <link href="~/Content/Site.css" rel="stylesheet" />
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <style>
         #containerFeatures{
             position:center;
-            margin-top:40px;
+            margin-top:140px;
             text-align: center;
+
+        }
+
+        #headingFeatures {
+            font-weight: bold;
+            font-family: Tokyo;
+            margin-bottom:20px;
         }
 
         #features {
             border-radius: 10px;
+            margin-top:50px;
+            
+
+
         }
+
+        #features i {
+                color: #d9653c;
+        }
+
+        #features h3 {
+                margin: 5px;
+                color: #ff8559;
+                font-family: Tokyo;
+        }
+
+        #features div p {
+              margin: 10px;
+              color: black;
+
+        }
+
+        #headingTitle{
+            padding-left: 30px;
+            padding-top: 35%;
+            font-weight: bold;
+            font-family: Tokyo;
+            text-align: left;
+        }
+
+        #subheadingTitle{
+            padding-top:3px;
+            padding-left: 30px;
+            text-align: left;
+        }
+
+        
+
+
     </style>
    
 </head>
@@ -37,19 +82,37 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Register", "Register", "Home")</li>
-                    <li>@Html.ActionLink("Login", "Login", "Home")</li>
+
                 </ul>
-            </div>
+                <ul class="nav navbar-nav navbar-right">
+                    <li> @Html.ActionLink("Register", "Register", "Home")</li>
+                    <li> @Html.ActionLink("Login", "Login", "Home")</li>
+                </ul>
+        </div>
+            
+
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container body-content" style="overflow:auto">
         @RenderBody()
         <hr />
         <footer>
-           
         </footer>
     </div>
+
+    <footer class="panel-footer" style="background-color: black">
+        <div class="row">
+            <div class="col-md-2">
+                <h5 style="color:#ff8559;text-align:left">Beware Task!</h5>
+            </div>
+            <div class="col-md-8"></div>
+            <div class="col-md-2">
+                <h5 style="color:#ff8559;text-align:right">2020</h5>
+            </div>
+        </div>
+        
+        
+    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
