--- a/BewareTask/Views/Home/Login.cshtml
+++ b/BewareTask/Views/Home/Login.cshtml
@@ -24,7 +24,7 @@
                 Login
             </div>
             <div class="card-body">
-                @using (Html.BeginForm("Login", "Home", FormMethod.Post))
+                @using (Html.BeginForm("Login", "User", FormMethod.Post))
                 {
                     @Html.AntiForgeryToken()
                     <div class="form-group">
