--- a/BewareTask/Views/Home/Register.cshtml
+++ b/BewareTask/Views/Home/Register.cshtml
@@ -23,7 +23,7 @@
 
 <div class="row justify-content-md-center">
     <div class="col-md-5">
-        @using (Html.BeginForm("Register", "Home", FormMethod.Post))
+        @using (Html.BeginForm("CreateUser", "User", FormMethod.Post))
         {
             //@Html.ValidationSummary()
             @Html.AntiForgeryToken()
