--- a/BewareTask/Views/Shared/_LayoutLogin.cshtml
+++ b/BewareTask/Views/Shared/_LayoutLogin.cshtml
@@ -60,6 +60,13 @@
             text-align: left;
         }
 
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+        }
         
 
 
@@ -99,7 +106,7 @@
         </footer>
     </div>
 
-    <footer class="panel-footer" style="background-color: black">
+    <footer class="footer" style="background-color: black">
         <div class="row">
             <div class="col-md-2">
                 <h5 style="color:#ff8559;text-align:left">Beware Task!</h5>
