--- a/BewareTask/Views/Shared/_Layout.cshtml
+++ b/BewareTask/Views/Shared/_Layout.cshtml
@@ -60,7 +60,40 @@
             text-align: left;
         }
 
-        
+        .footer {
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+            height: 50px;
+        }
+
+        .btnActionLink {
+            background-color: #fff568;
+            padding: 10px;
+            border-radius: 5px;
+            color:black;
+        }
+
+        #loginTitle {
+            font-size:30px;
+            font-family:Tokyo;
+        }
+
+        #loginContainer {
+            margin-left: 120px;
+            margin-right: 25px;
+            margin-top: 100px;
+            padding: 10px;
+            background-color: #ffebe2;
+            border-radius: 5px;
+        }
+
+        #btnLogin {
+            background-color: #d9653c;
+            border: 0px;
+        }
+
 
 
     </style>
@@ -100,8 +133,8 @@
         </footer>
     </div>
 
-    <footer class="panel-footer" style="background-color: black">
-        <div class="row">
+    <footer class="footer" style="background-color: black">
+        <div class="row" style="padding-top:10px">
             <div class="col-md-2">
                 <h5 style="color:#ff8559;text-align:left">Beware Task!</h5>
             </div>
