--- a/BewareTask/Views/Task/Index.cshtml
+++ b/BewareTask/Views/Task/Index.cshtml
@@ -41,9 +41,6 @@
 
 
 <h1>Your Task List</h1>
-@{
-    var data = ViewData["task"];
-}
 <table class="table table-bordered">
     <thead>
         <tr>
@@ -54,6 +51,26 @@
         </tr>
     </thead>
     <tbody>
-        @Html.Raw(ViewData["task"])
+        @*@Html.Raw(ViewData["task"])*@
+        @{ 
+            var indexCount = 0;
+        }
+        @foreach (var item in ViewData["taskList"] as List<BewareTask.Models.task>)
+        {
+            indexCount++;
+            <tr>
+                <td>@indexCount</td>
+                <td>@item.TaskName</td>
+                @if (item.deadline.Year == 1)
+                {
+                    <td>-</td>
+                }
+                else
+	            {
+                    <td>@item.deadline</td>
+	            }
+                <td>@Html.ActionLink("Edit", "EditTask", "Task") | @Html.ActionLink("Delete", "DeleteTask", "Task")</td>
+            </tr>
+        }
     </tbody>
 </table>
