--- a/BewareTask/Views/Shared/_Layout.cshtml
+++ b/BewareTask/Views/Shared/_Layout.cshtml
@@ -94,6 +94,13 @@
             border: 0px;
         }
 
+        .navbar-brand {
+            color: #ff8559;
+        }
+
+        .navbar-inverse .navbar-brand {
+            color: #ff8559;
+        }
 
 
     </style>
