--- a/BewareTask/Views/Home/Contact.cshtml
+++ b/BewareTask/Views/Home/Contact.cshtml
@@ -12,6 +12,7 @@
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <i class='fab fa-instagram' style='font-size:36px'></i>
+    <strong>Instagram</strong>   <a href="https://www.instagram.com/gamesbybeware/"> gamesbybeware</a><br />
     <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
 </address>
