--- a/BewareTask/Views/Home/Index.cshtml
+++ b/BewareTask/Views/Home/Index.cshtml
@@ -56,7 +56,7 @@
             <i class='fas fa-mouse-pointer' style='font-size:50px'></i>
             <h3>Easy to Use</h3>
             <div>
-                <p>The task management designed so the user can use it as easy as posible</p>
+                <p>The task management designed so the user can use it as easy as possible</p>
             </div>
         </div>
         <div class="col-md-6" id="features">
