--- a/BewareTask/Views/Home/Index.cshtml
+++ b/BewareTask/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
                 To-Do List
             </h2>
             <div class="sub-heading" id="subheadingTitle">
-                <p>Beware Task! is a simple to-do list web for your task managemen</p>
+                <p>Beware Task! is a simple to-do list web for your task management</p>
                 <p class="mb-5">
                     @Html.ActionLink("Login", "Login", "Home", new { @class = "btnActionLink" })
                     @Html.ActionLink("Register Now!", "Register", "Home", new { @class = "btnActionLink" })
