--- a/BewareTask/Views/Home/Contact.cshtml
+++ b/BewareTask/Views/Home/Contact.cshtml
@@ -1,18 +1,25 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <i class='fab fa-instagram' style='font-size:36px'></i>
-    <strong>Instagram</strong>   <a href="https://www.instagram.com/gamesbybeware/"> gamesbybeware</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+
+<div class="container">
+    <div>
+        <h3 style="font-family: Tokyo">Hi! Feel free to contact us here : </h3>
+    </div>
+    <div class="row">
+        <div class="col-md-3">
+            <a href="https://www.instagram.com/gamesbybeware/">  <i class='fab fa-instagram' style='font-size:36px'></i><h6>Instagram : </h6></a>
+            <h6>gamesbybeware</h6>
+        </div>
+        <div class="col-md-3">
+            <a href="mailto:gamesbybeware@gmail.com"><i class="material-icons" style="font-size:36px">email</i> <h6>Email : </h6></a>
+            <h6>gamesbybeware@gmail.com</h6>
+        </div>
+    </div>
+</div>
+
+
+ 
