--- a/BewareTask/Views/Task/Edit.cshtml
+++ b/BewareTask/Views/Task/Edit.cshtml
@@ -19,11 +19,11 @@
             <div class="card-body">
                 <div class="form-group">
                     @Html.LabelFor(m => m.TaskName)
-                    @Html.TextBoxFor(m => m.TaskName, new { @class = "form-control", @placeholder = "Due Date" })
+                    @Html.TextBoxFor(m => m.TaskName, new { @class = "form-control", @placeholder = "New task name" })
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.deadline)
-                    @Html.Html5DateRenderingMode(m => m.deadline, new { @class = "form-control", @placeholder = "Due Date" })
+                    @Html.TextBoxFor(m => m.deadline, "{0:dd/MM/yyyy}")
                 </div>
                 <div class="form-group">
                     <input type="submit" name="submit" class="btn btn-danger" id="btnLogin" value="Edit Task" />
