--- a/BewareTask/Views/Task/Edit.cshtml
+++ b/BewareTask/Views/Task/Edit.cshtml
@@ -4,6 +4,10 @@
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
+@{ 
+    var data = (BewareTask.Models.task)ViewData["editID"];
+}
+
 <div>
     @using (Html.BeginForm("EditTask", "Task", FormMethod.Post))
     {
@@ -18,12 +22,16 @@
             </div>
             <div class="card-body">
                 <div class="form-group">
+                    @Html.LabelFor(m => m.id)
+                    @Html.TextBoxFor(m => m.id, new { @class = "form-control", @placeholder = "New task name", @Value = data.id })
+                </div>
+                <div class="form-group">
                     @Html.LabelFor(m => m.TaskName)
-                    @Html.TextBoxFor(m => m.TaskName, new { @class = "form-control", @placeholder = "New task name" })
+                    @Html.TextBoxFor(m => m.TaskName, new { @class = "form-control", @placeholder = "New task name", @Value = data.TaskName })
                 </div>
                 <div class="form-group">
                     @Html.LabelFor(m => m.deadline)
-                    @Html.TextBoxFor(m => m.deadline, "{0:dd/MM/yyyy}")
+                    @Html.EditorFor(m => m.deadline, new { @class = "form-control", @placeholder = "New task name", @Value = data.deadline })
                 </div>
                 <div class="form-group">
                     <input type="submit" name="submit" class="btn btn-danger" id="btnLogin" value="Edit Task" />
